--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -64,104 +64,216 @@
                 android:rotation="270"
                 app:srcCompat="@drawable/less" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:fontFamily="sans-serif-black"
-                android:text="Nome prestador"
-                android:textColor="@color/Branco"
-                android:textSize="18sp" />
-
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="25sp"
-                android:text="Função prestador"
-                android:textColor="@color/Branco"
-                android:textSize="18sp" />
-
 
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-    <!--    IMPORTANTE-->
+
+
     <androidx.cardview.widget.CardView
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
-        android:layout_height="710dp"
+        android:layout_height="604dp"
         app:cardBackgroundColor="@color/Branco">
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            app:srcCompat="@drawable/images" />
+            app:srcCompat="@drawable/pngegg" />
 
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="200dp"
-            app:srcCompat="@drawable/images" />
+
 
         <ImageView
             android:id="@+id/imageView9"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="100dp"
-            app:srcCompat="@drawable/mulher" />
+            app:srcCompat="@drawable/fotoChat" />
 
         <ImageView
             android:id="@+id/imageView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="200dp"
-            app:srcCompat="@drawable/images" />
+            app:srcCompat="@drawable/pngegg" />
 
         <ImageView
             android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="400dp"
-            app:srcCompat="@drawable/images" />
+            app:srcCompat="@drawable/pngegg" />
 
         <ImageView
             android:id="@+id/imageView14"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="300dp"
-            app:srcCompat="@drawable/mulher" />
+            app:srcCompat="@drawable/fotoChat" />
 
         <ImageView
             android:id="@+id/imageView15"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="500dp"
-            app:srcCompat="@drawable/mulher" />
+            app:srcCompat="@drawable/fotoChat" />
 
         <ImageView
             android:id="@+id/imageView16"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="600dp"
-            app:srcCompat="@drawable/images" />
+            app:srcCompat="@drawable/pngegg" />
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="@color/Cinza"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="90dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="nós podemos marcar?"
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:textSize="16dp"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="200dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="#074EAD"
+            android:layout_marginTop="110dp"
+            android:layout_marginLeft="130dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quando você pode vir?"
+                android:layout_gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="16dp"/> />
+
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="180dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="@color/Cinza"
+            android:layout_marginTop="210dp"
+            android:layout_marginLeft="90dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No sabado pode ser?"
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:textSize="16dp" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="160dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="#074EAD"
+            android:layout_marginTop="310dp"
+            android:layout_marginLeft="170dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Isso, está otimo!!!"
+                android:layout_gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="16dp" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="260dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="@color/Cinza"
+            android:layout_marginTop="410dp"
+            android:layout_marginLeft="90dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Combinado, umas 14:00 estou aí "
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:textSize="16dp" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="120dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="#074EAD"
+            android:layout_marginTop="510dp"
+            android:layout_marginLeft="210dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Combinado!!!"
+                android:layout_gravity="center"
+                android:textColor="#FFFFFF"
+                android:textSize="16dp" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="240dp"
+            android:layout_height="45dp"
+            app:cardBackgroundColor="@color/Cinza"
+            android:layout_marginTop="610dp"
+            android:layout_marginLeft="90dp"
+            app:cardCornerRadius="19dp">
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ok, até logo! "
+                android:layout_gravity="center"
+                android:textColor="#000000"
+                android:textSize="16dp" />
+        </androidx.cardview.widget.CardView>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
 
     </androidx.cardview.widget.CardView>
 
@@ -201,14 +313,7 @@
 
         </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="40dp"
-            android:layout_height="50dp"
-            android:layout_gravity="right"
-            android:layout_marginRight="10dp"
-            android:shadowColor="#223263"
-            android:text="Button" />
+
 
         <ImageView
             android:id="@+id/imageAudio"
