--- a/app/src/main/res/layout/activity_listagem_prestador.xml
+++ b/app/src/main/res/layout/activity_listagem_prestador.xml
@@ -130,14 +130,19 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-
+<ScrollView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <ListView
         android:id="@+id/list_View"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="870dp"
         android:layout_below="@id/id_nicho"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp" />
-
-
+    </LinearLayout>
+</ScrollView>
 </LinearLayout>
