--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,15 +21,15 @@
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginLeft="35dp"
-                app:srcCompat="@drawable/profile" />
+                app:srcCompat="@drawable/pngegg" />
 
             <ImageView
                 android:id="@+id/imageView4"
                 android:layout_width="60dp"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:layout_gravity="right"
                 android:layout_marginRight="12dp"
                 app:srcCompat="@drawable/money" />
@@ -69,11 +69,10 @@
 
     </LinearLayout>
 
-
     <androidx.cardview.widget.CardView
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
-        android:layout_height="604dp"
+        android:layout_height="642dp"
         app:cardBackgroundColor="@color/Branco">
 
         <ImageView
@@ -84,6 +83,14 @@
             android:layout_marginTop="10dp"
             app:srcCompat="@drawable/pngegg" />
 
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="100dp"
+            app:srcCompat="@drawable/fotoredonda" />
+
 
         <ImageView
             android:id="@+id/imageView13"
@@ -93,6 +100,15 @@
             android:layout_marginTop="200dp"
             app:srcCompat="@drawable/pngegg" />
 
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="300dp"
+            app:srcCompat="@drawable/fotoredonda" />
+
         <ImageView
             android:id="@+id/imageView12"
             android:layout_width="60sp"
@@ -100,6 +116,14 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="400dp"
             app:srcCompat="@drawable/pngegg" />
+
+        <ImageView
+            android:id="@+id/imageView14"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="500dp"
+            app:srcCompat="@drawable/fotoredonda" />
 
         <ImageView
             android:id="@+id/imageView16"
@@ -112,38 +136,39 @@
         <androidx.cardview.widget.CardView
             android:layout_width="200dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="@color/Cinza"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="90dp"
+            android:layout_marginTop="20dp"
+            app:cardBackgroundColor="@color/Cinza"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="nós podemos marcar?"
                 android:layout_gravity="center"
+                android:text="nós podemos marcar?"
                 android:textColor="#000000"
-                android:textSize="16dp"/>
+                android:textSize="16dp" />
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="200dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="#074EAD"
-            android:layout_marginTop="110dp"
             android:layout_marginLeft="130dp"
+            android:layout_marginTop="110dp"
+            app:cardBackgroundColor="#074EAD"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Quando você pode vir?"
                 android:layout_gravity="center"
+                android:text="Quando você pode vir?"
                 android:textColor="#FFFFFF"
-                android:textSize="16dp"/> />
+                android:textSize="16dp" />
+            />
 
 
         </androidx.cardview.widget.CardView>
@@ -151,17 +176,17 @@
         <androidx.cardview.widget.CardView
             android:layout_width="180dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="@color/Cinza"
-            android:layout_marginTop="210dp"
             android:layout_marginLeft="90dp"
+            android:layout_marginTop="210dp"
+            app:cardBackgroundColor="@color/Cinza"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="No sabado pode ser?"
                 android:layout_gravity="center"
+                android:text="No sabado pode ser?"
                 android:textColor="#000000"
                 android:textSize="16dp" />
         </androidx.cardview.widget.CardView>
@@ -169,17 +194,17 @@
         <androidx.cardview.widget.CardView
             android:layout_width="160dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="#074EAD"
-            android:layout_marginTop="310dp"
             android:layout_marginLeft="170dp"
+            android:layout_marginTop="310dp"
+            app:cardBackgroundColor="#074EAD"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Isso, está otimo!!!"
                 android:layout_gravity="center"
+                android:text="Isso, está otimo!!!"
                 android:textColor="#FFFFFF"
                 android:textSize="16dp" />
 
@@ -188,17 +213,17 @@
         <androidx.cardview.widget.CardView
             android:layout_width="260dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="@color/Cinza"
-            android:layout_marginTop="410dp"
             android:layout_marginLeft="90dp"
+            android:layout_marginTop="410dp"
+            app:cardBackgroundColor="@color/Cinza"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Combinado, umas 14:00 estou aí "
                 android:layout_gravity="center"
+                android:text="Combinado, umas 14:00 estou aí "
                 android:textColor="#000000"
                 android:textSize="16dp" />
         </androidx.cardview.widget.CardView>
@@ -206,17 +231,17 @@
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="#074EAD"
-            android:layout_marginTop="510dp"
             android:layout_marginLeft="210dp"
+            android:layout_marginTop="510dp"
+            app:cardBackgroundColor="#074EAD"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Combinado!!!"
                 android:layout_gravity="center"
+                android:text="Combinado!!!"
                 android:textColor="#FFFFFF"
                 android:textSize="16dp" />
         </androidx.cardview.widget.CardView>
@@ -224,28 +249,26 @@
         <androidx.cardview.widget.CardView
             android:layout_width="240dp"
             android:layout_height="45dp"
-            app:cardBackgroundColor="@color/Cinza"
-            android:layout_marginTop="610dp"
             android:layout_marginLeft="90dp"
+            android:layout_marginTop="610dp"
+            app:cardBackgroundColor="@color/Cinza"
             app:cardCornerRadius="19dp">
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ok, até logo! "
                 android:layout_gravity="center"
+                android:text="Ok, até logo! "
                 android:textColor="#000000"
                 android:textSize="16dp" />
         </androidx.cardview.widget.CardView>
-
-
     </androidx.cardview.widget.CardView>
-
+<!--************-->
     <androidx.cardview.widget.CardView
         cardBackgroundColor="android:blue"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="80dp"
         app:cardBackgroundColor="#223263">
 
 
@@ -254,7 +277,7 @@
             android:layout_height="35dp"
             android:layout_gravity="left"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="15dp"
             app:cardBackgroundColor="#F5F5F5"
             app:cardCornerRadius="19dp">
 
@@ -277,9 +300,7 @@
                 app:srcCompat="@drawable/attach" />
 
         </androidx.cardview.widget.CardView>
-
-
-
+<!--       *****************************************-->
         <ImageView
             android:id="@+id/imageAudio"
             android:layout_width="40dp"
