--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -7,11 +7,43 @@
     android:orientation="vertical"
     tools:context=".Cadastro">
 
-    <TextView
-        android:id="@+id/tv_crieconta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Crie sua nova conta" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_logo_cadastro2"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <ImageView
+            android:id="@+id/iv_logo_cadastro"
+            android:layout_width="300dp"
+            android:layout_height="150dp"
+            android:scaleType="centerInside"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/logotcc" />
+
+        <TextView
+            android:id="@+id/tv_vamoscomecar_cadastro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vamos começar!"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_logo_cadastro"
+            android:textColor="@color/Primaria"/>
+
+        <TextView
+            android:id="@+id/tv_facalogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Crie sua nova conta"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_vamoscomecar_cadastro"
+            android:textColor="@color/Preto"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,103 +59,124 @@
                 android:id="@+id/et_nome"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Nome Completo" />
+                android:hint="Nome Completo"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail mais utilizado"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_celular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Celular (com DDD)"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_cep"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="CEP"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_rua"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Rua" />
+                android:hint="Rua"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_estado"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Estado" />
+                android:hint="Estado"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_cidade"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Cidade " />
+                android:hint="Cidade "
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_bairro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Bairro" />
+                android:hint="Bairro"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_numero"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Número da residência"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <EditText
                 android:id="@+id/et_complemento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Complemento" />
-
-            <EditText
-                android:id="@+id/et_datadenascimento"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Data de nascimento" />
-
-            <EditText
-                android:id="@+id/et_cpf"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="CPF"
-                android:inputType="numberDecimal" />
-
-            <EditText
-                android:id="@+id/et_rg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="RG"
-                android:inputType="numberDecimal" />
-
-            <EditText
-                android:id="@+id/et_senha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Senha" />
-
-            <EditText
-                android:id="@+id/et_confirmação_de_senha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Confirme sua senha" />
+                android:hint="Complemento"
+                android:background="@drawable/edit_text_login_background"
+                android:padding="15dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="8dp"/>
 
             <Button
-                android:id="@+id/button_cadastro"
+                android:id="@+id/button_continuar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Cadastrar-me" />
+                android:text="Continuar"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="11dp"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
